--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@graphql-codegen/cli": "^2.1.1",
+    "@graphql-codegen/typescript": "^2.2.0",
+    "@graphql-codegen/typescript-operations": "^2.1.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -13,7 +16,9 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "dotenv": "^10.0.0",
     "firebase": "^8.10.0",
+    "graphql": "^15.5.2",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
